# Jogo-Feinho---SDL2

./: .gitignore  CMakeLists.txt  README.md
src/: barreira.c++  magia_negra.c++  main.c++  player.c++  timer.c++
src/H/: barreira.h  magia_negra.h  player.h  timer.h
